<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:gravity="center"
            android:background="@color/grey_light"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/ic_launcher"
            android:padding="@dimen/small_gap"
            android:background="@android:color/white"
            android:adjustViewBounds="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/bullet1"
            android:text="@string/bullet1"
            android:layout_marginTop="@dimen/small_gap"
            style="@style/ShowcaseText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/bullet2"
            android:text="@string/bullet2"
            style="@style/ShowcaseText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/bullet3"
            android:text="@string/bullet3"
            style="@style/ShowcaseText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/bullet4"
            android:text="@string/bullet4"
            style="@style/ShowcaseText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/bulletTwitter"
            android:text="@string/bullet5"
            style="@style/ShowcaseText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:weightSum="2"
            android:layout_marginTop="@dimen/small_gap"
            android:padding="@dimen/small_gap"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TypiconButton
                android:id="@+id/button_website"
                android:layout_weight="1"
                android:text="@string/website_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <TypiconButton
                android:id="@+id/button_share"
                android:layout_weight="1"
                android:text="@string/share_button"
                android:layout_marginLeft="@dimen/small_gap"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>